grammar.js
    source_file: ($) =>
      seq(repeat($.comment), optional(seq($.script_block, repeat($.comment))), $.output_block, repeat($.comment)),

    identifier: ($) =>
      choice(
        reserved("global", $.identifier_word),
        alias($._kebab_identifier_word, $.identifier_word),
      ),

    identifier_word: (_) =>
      token(seq(IDENTIFIER_HEAD, repeat(seq("-", IDENTIFIER_SEGMENT)))),

    _kebab_identifier_word: (_) =>
      token(prec(1, seq(IDENTIFIER_HEAD, repeat1(seq("-", IDENTIFIER_SEGMENT))))),

    string_literal: ($) =>
      choice(
        seq(
          "'",
          repeat(
            choice(
              token.immediate(/[^'\\\r\n]+/),
              token.immediate(seq("\\", choice("\\", "'", '"', "n", "r", "t"))),
            ),
          ),
          token.immediate("'"),
        ),
        seq(
          '"',
          repeat(
            choice(
              token.immediate(choice(/[^"\\\r\n$]+/, "$")),
              token.immediate(seq("\\", choice("\\", "'", '"', "n", "r", "t"))),
              $.interpolation,
            ),
          ),
          token.immediate('"'),
        ),
        seq(
          '"""',
          repeat(
            choice(
              token.immediate(choice(/[^"\\$]+/, '"', '""', "$")),
              token.immediate(seq("\\", choice("\\", "'", '"', "n", "r", "t"))),
              $.interpolation,
            ),
          ),
          '"""',
        ),
      ),

    int_literal: (_) => /\d+/,
    boolean_literal: (_) => choice("true", "false"),
    import_declaration: ($) =>
      seq(
        "from",
        $.string_literal,
        choice(
          seq($.bind_keyword, $.identifier),
          seq(
            "import",
            $.identifier,
            optional(seq(":", $.identifier)),
            repeat(seq(",", $.identifier, optional(seq(":", $.identifier)))),
          ),
        ),
        ";",
      ),

    bind_keyword: (_) => "bind",

    script_block: ($) =>
      seq(
        $._script_delimiter,
        repeat($.comment),
        repeat(seq($.import_declaration, repeat($.comment))),
        repeat(seq($._declaration, repeat($.comment))),
        $._script_delimiter,
      ),

    _script_delimiter: (_) => token(prec(100, seq("|", repeat1("="), "|"))),

    _declaration: ($) =>
      choice(
        $.variable_declaration,
        $.type_declaration,
        $.schema_declaration,
        $.gen_doc_declaration,
        $.schema_doc_declaration,
      ),

    variable_declaration: ($) =>
      seq(
        $._type_reference,
        $.identifier,
        "=",
        $._expression,
        optional($.inline_description),
        ";",
      ),

    schema_declaration: ($) => seq("schema", $.identifier, ":", $.record_type, optional(";")),

    record_type: ($) => seq("{", repeat(choice($.comment, $.schema_field)), "}"),

    field_name: ($) =>
      choice(
        $.identifier,
        "alias",
        "schema",
        "output",
        "schema_file",
        "parse",
        "parse_file",
        "data",
        "from",
        "import",
        "record",
      ),
    _field_suffix: ($) =>
      choice(
        seq($.inline_description, optional($._field_separator)),
        seq($._field_separator, optional($.inline_description)),
      ),

    schema_field: ($) =>
      seq(
        $.field_name,
        optional($.optional_marker),
        ":",
        $._type_reference,
        optional($._field_suffix),
      ),

    _type_reference: ($) =>
      choice(
        $.string_type,
        $.int_type,
        $.float_type,
        $.hex_int_type,
        $.hex_float_type,
        $.boolean_type,
        $.array_type,
        $.record_map_type,
        $.fusion_type,
        $.variant_type,
        $.choice_type,
        $.named_type,
      ),

    string_type: (_) => "string",
    int_type: (_) => "int",
    array_type: ($) => seq("array", "<", $._type_reference, ">"),

    fusion_type: ($) =>
      prec(1, seq("fusion", "[", $._type_reference, repeat(seq(",", $._type_reference)), "]")),

    variant_type: ($) =>
      prec(1, seq("variant", "[", $._type_reference, repeat(seq(",", $._type_reference)), "]")),

    named_type: ($) => $.identifier,

    output_block: ($) =>
      choice(
        seq(
          optional(alias($._data_directive_list, $.directive_list)),
          "{",
          repeat(choice($.comment, $.output_field)),
          "}",
        ),
        seq(
          alias($._schema_directive_list, $.directive_list),
          "{",
          repeat(choice($.comment, $.output_schema_field)),
          "}",
        ),
      ),

    _data_directive_list: ($) =>
      prec(
        1,
        seq(
          "[",
          choice(
            alias($.data_output_mode_directive, $.output_mode_directive),
            $.schema_directive,
            $.schema_file_directive,
            $.parse_directive,
            $.parse_file_directive,
            $.description_directive,
          ),
          repeat(
            seq(
              ",",
              choice(
                alias($.data_output_mode_directive, $.output_mode_directive),
                $.schema_directive,
                $.schema_file_directive,
                $.parse_directive,
                $.parse_file_directive,
                $.description_directive,
              ),
            ),
          ),
          "]",
        ),
      ),

    _schema_directive_list: ($) =>
      prec(
        2,
        seq(
          "[",
          alias($.schema_output_mode_directive, $.output_mode_directive),
          optional(seq(",", $.description_directive)),
          "]",
        ),
      ),

    data_mode: (_) => choice("'data'", '"data"'),

    schema_mode: (_) => choice("'schema'", '"schema"'),

    schema_directive: ($) => seq("schema", "=", $.identifier),

    schema_file_directive: ($) => seq("schema_file", "=", $.string_literal),

    parse_directive: ($) => seq("parse", "=", $.identifier),

    parse_file_directive: ($) => seq("parse_file", "=", $.string_literal),

    description_directive: ($) => seq("description", "=", $._expression),

    output_field: ($) =>
      choice(
        seq(
          $.field_name,
          optional($.optional_marker),
          ":",
          $._expression,
          optional($._field_suffix),
        ),
        seq($.field_name, optional($._field_suffix)),
      ),

    output_schema_field: ($) =>
      seq(
        $.field_name,
        optional($.optional_marker),
        ":",
        $._type_reference,
        optional($._field_suffix),
      ),

    inline_description: ($) => seq("/#", $.description_text),

    description_text: (_) => token(/[^,;\r\n]+/),

    optional_marker: (_) => "?",

    _expression: ($) =>
      choice(
        $.conditional_expression,
        $._non_conditional_expression,
      ),

    _primary_expression: ($) =>
      choice(
        $.identifier,
        $.float_literal,
        $.int_literal,
        $.hex_float_literal,
        $.hex_int_literal,
        $.string_literal,
        $.boolean_literal,
        $.null_literal,
        $.array_literal,
        $.record_literal,
        $.self_reference,
        $.parsed_variable_reference,
        $.parenthesized_expression,
        $.match_expression,
      ),

    member_access: ($) =>
      prec.left(
        PREC.member,
        seq(
          field("target", choice($._primary_expression, $.member_access)),
          field("operator", choice(".", "?.")),
          field("member", $.identifier),
        ),
      ),

    parsed_variable_reference: ($) =>
      prec.left(PREC.member + 1, seq("$", $.identifier)),

    array_literal: ($) =>
      seq("[", optional(seq($._expression, repeat(seq(",", $._expression)), optional(","))), "]"),

    record_literal: ($) => seq("{", repeat(choice($.comment, $.record_field)), "}"),

    record_field: ($) =>
      choice(
        seq(
          $.field_name,
          optional($.optional_marker),
          ":",
          $._expression,
          optional(","),
        ),
        seq($.field_name, optional(",")),
      ),
