test/corpus/outputs.txt
===
default data output block
===
{
  name: "Ada" /# The emitted user name
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (string_literal)
      (inline_description
        (description_text)))))

===
output and record field shorthands
===
|===|
string name = "Ada";
schema User: { name: string, };
User user = { name, };
|===|
[output = "data"]
{
  name,
  user,
}
---

(source_file
  (script_block
    (variable_declaration
      (string_type)
      (identifier
        (identifier_word))
      (string_literal))
    (schema_declaration
      (identifier
        (identifier_word))
      (record_type
        (schema_field
          (field_name
            (identifier
              (identifier_word)))
          (string_type))))
    (variable_declaration
      (named_type
        (identifier
          (identifier_word)))
      (identifier
        (identifier_word))
      (record_literal
        (record_field
          (field_name
            (identifier
              (identifier_word)))))))
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode)))
    (output_field
      (field_name
        (identifier
          (identifier_word))))
    (output_field
      (field_name
        (identifier
          (identifier_word))))))

===
explicit data output block
===
[output = "data"]
{
  name: "Ada"
}
---

(source_file
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode)))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (string_literal))))

===
data output with schema directive
===
|===|
schema User: {
  name: string,
  age?: int
}
|===|
[output = "data", schema = User]
{
  name: "Ada",
  age?: 27
}
---

(source_file
  (script_block
    (schema_declaration
      (identifier
        (identifier_word))
      (record_type
        (schema_field
          (field_name
            (identifier
              (identifier_word)))
          (string_type))
        (schema_field
          (field_name
            (identifier
              (identifier_word)))
          (optional_marker)
          (int_type)))))
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode))
      (schema_directive
        (identifier
          (identifier_word))))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (string_literal))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (optional_marker)
      (int_literal))))

===
data output with schema directive without data
===

|===|
schema User: {
  name: string,
  age?: int
}
|===|

[schema=User]
{
  name: "Ada",
  age?: 27
}
---

(source_file
  (script_block
    (schema_declaration
      (identifier
        (identifier_word))
      (record_type
        (schema_field
          (field_name
            (identifier
              (identifier_word)))
          (string_type))
        (schema_field
          (field_name
            (identifier
              (identifier_word)))
          (optional_marker)
          (int_type)))))
  (output_block
    (directive_list
      (schema_directive
        (identifier
          (identifier_word))))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (string_literal))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (optional_marker)
      (int_literal))))

===
data output with schema directive without data
===



[schema_file = "./user-schema.mace"]
{
  name: "Ada",
  age?: 27
}
---

(source_file
  (output_block
    (directive_list
      (schema_file_directive
        (string_literal)))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (string_literal))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (optional_marker)
      (int_literal))))

===
data output with parse directive without data
===
|===|
schema Runtime: {
  env: string,
}
|===|
[parse = Runtime]
{
  result: $env,
}
---

(source_file
  (script_block
    (schema_declaration
      (identifier
        (identifier_word))
      (record_type
        (schema_field
          (field_name
            (identifier
              (identifier_word)))
          (string_type)))))
  (output_block
    (directive_list
      (parse_directive
        (identifier
          (identifier_word))))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (parsed_variable_reference
        (identifier
          (identifier_word))))))

===
data output with parse_file directive without data
===
[parse_file = "./runtime.mace"]
{
  result: $env,
}
---

(source_file
  (output_block
    (directive_list
      (parse_file_directive
        (string_literal)))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (parsed_variable_reference
        (identifier
          (identifier_word))))))

===
data output with imported parse directive without data
===
|===|
from "./nx_inputs.mace" bind NxInputs;
|===|
[parse = NxInputs]
{
  name: $project.name,
}
---

(source_file
  (script_block
    (import_declaration
      (string_literal)
      (bind_keyword)
      (identifier
        (identifier_word))))
  (output_block
    (directive_list
      (parse_directive
        (identifier
          (identifier_word))))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (member_access
        (parsed_variable_reference
          (identifier
            (identifier_word)))
        (identifier
          (identifier_word))))))

===
data output with reordered directives
===
|===|
schema Runtime: {
  env: string,
}
|===|
[parse = Runtime, output = "data"]
{
  result: $env,
}
---

(source_file
  (script_block
    (schema_declaration
      (identifier
        (identifier_word))
      (record_type
        (schema_field
          (field_name
            (identifier
              (identifier_word)))
          (string_type)))))
  (output_block
    (directive_list
      (parse_directive
        (identifier
          (identifier_word)))
      (output_mode_directive
        (data_mode)))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (parsed_variable_reference
        (identifier
          (identifier_word))))))

===
schema output with type references
===
[output = "schema", description = """
# User Output
"""]
{
  name: string, /# The user's name
  scores: array<array<int>>,
  profile?: Profile
}
---

(source_file
  (output_block
    (directive_list
      (output_mode_directive
        (schema_mode))
      (description_directive
        (string_literal)))
    (output_schema_field
      (field_name
        (identifier
          (identifier_word)))
      (string_type)
      (inline_description
        (description_text)))
    (output_schema_field
      (field_name
        (identifier
          (identifier_word)))
      (array_type
        (array_type
          (int_type))))
    (output_schema_field
      (field_name
        (identifier
          (identifier_word)))
      (optional_marker)
      (named_type
        (identifier
          (identifier_word))))))

===
schema output with variant type references
===
[output = "schema"]
{
  value: variant[string, int],
  profile?: variant[Profile, string]
}
---

(source_file
  (output_block
    (directive_list
      (output_mode_directive
        (schema_mode)))
    (output_schema_field
      (field_name
        (identifier
          (identifier_word)))
      (variant_type
        (string_type)
        (int_type)))
    (output_schema_field
      (field_name
        (identifier
          (identifier_word)))
      (optional_marker)
      (variant_type
        (named_type
          (identifier
            (identifier_word)))
        (string_type)))))

===
schema output with fusion schema composition references
===
[output = "schema"]
{
  value: fusion[Profile, Audit]
}
---

(source_file
  (output_block
    (directive_list
      (output_mode_directive
        (schema_mode)))
    (output_schema_field
      (field_name
        (identifier
          (identifier_word)))
      (fusion_type
        (named_type
          (identifier
            (identifier_word)))
        (named_type
          (identifier
            (identifier_word)))))))

===
optional output field
===
{
  enabled?: true
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (optional_marker)
      (boolean_literal))))

===
keyword field names inside record and output fields
===
[output = "data"]
{
  type: {
    version: version,
    type: version,
  },
}
---

(source_file
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode)))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (record_literal
        (record_field
          (field_name
            (identifier
              (identifier_word)))
          (identifier
            (identifier_word)))
        (record_field
          (field_name
            (identifier
              (identifier_word)))
          (identifier
            (identifier_word)))))))

===
duplicate output directives are invalid
===
[output = "data", output = "schema"]
{
  name: "Ada",
}
---

(source_file
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode))
      (ERROR))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (string_literal))))

===
array nesting level 1
===
{
  value: [1],
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (array_literal
        (int_literal)))))

===
array nesting level 2
===
{
  value: [[1]],
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (array_literal
        (array_literal
          (int_literal))))))

===
array nesting level 3
===
{
  value: [[[1]]],
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (array_literal
        (array_literal
          (array_literal
            (int_literal)))))))

===
array nesting level 4
===
{
  value: [[[[1]]]],
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (array_literal
        (array_literal
          (array_literal
            (array_literal
              (int_literal))))))))

===
array nesting level 5
===
{
  value: [[[[[1]]]]],
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (array_literal
        (array_literal
          (array_literal
            (array_literal
              (array_literal
                (int_literal)))))))))

===
array nesting level 6
===
{
  value: [[[[[[1]]]]]],
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (array_literal
        (array_literal
          (array_literal
            (array_literal
              (array_literal
                (array_literal
                  (int_literal))))))))))

===
array nesting level 7
===
{
  value: [[[[[[[1]]]]]]],
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (array_literal
        (array_literal
          (array_literal
            (array_literal
              (array_literal
                (array_literal
                  (array_literal
                    (int_literal)))))))))))

===
array nesting level 8
===
{
  value: [[[[[[[[1]]]]]]]],
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (array_literal
        (array_literal
          (array_literal
            (array_literal
              (array_literal
                (array_literal
                  (array_literal
                    (array_literal
                      (int_literal))))))))))))

===
array nesting level 9
===
{
  value: [[[[[[[[[1]]]]]]]]],
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (array_literal
        (array_literal
          (array_literal
            (array_literal
              (array_literal
                (array_literal
                  (array_literal
                    (array_literal
                      (array_literal
                        (int_literal)))))))))))))

===
array nesting level 10
===
{
  value: [[[[[[[[[[1]]]]]]]]]],
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (array_literal
        (array_literal
          (array_literal
            (array_literal
              (array_literal
                (array_literal
                  (array_literal
                    (array_literal
                      (array_literal
                        (array_literal
                          (int_literal))))))))))))))

===
record nesting level 1
===
{
  value: {
    level1: 1,
  },
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (record_literal
        (record_field
          (field_name
            (identifier
              (identifier_word)))
          (int_literal))))))

===
record nesting level 2
===
{
  value: {
    level1: {
      level2: 1,
    },
  },
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (record_literal
        (record_field
          (field_name
            (identifier
              (identifier_word)))
          (record_literal
            (record_field
              (field_name
                (identifier
                  (identifier_word)))
              (int_literal))))))))

===
record nesting level 3
===
{
  value: {
    level1: {
      level2: {
        level3: 1,
      },
    },
  },
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (record_literal
        (record_field
          (field_name
            (identifier
              (identifier_word)))
          (record_literal
            (record_field
              (field_name
                (identifier
                  (identifier_word)))
              (record_literal
                (record_field
                  (field_name
                    (identifier
                      (identifier_word)))
                  (int_literal))))))))))

===
record nesting level 4
===
{
  value: {
    level1: {
      level2: {
        level3: {
          level4: 1,
        },
      },
    },
  },
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (record_literal
        (record_field
          (field_name
            (identifier
              (identifier_word)))
          (record_literal
            (record_field
              (field_name
                (identifier
                  (identifier_word)))
              (record_literal
                (record_field
                  (field_name
                    (identifier
                      (identifier_word)))
                  (record_literal
                    (record_field
                      (field_name
                        (identifier
                          (identifier_word)))
                      (int_literal))))))))))))

===
record nesting level 5
===
{
  value: {
    level1: {
      level2: {
        level3: {
          level4: {
            level5: 1,
          },
        },
      },
    },
  },
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (record_literal
        (record_field
          (field_name
            (identifier
              (identifier_word)))
          (record_literal
            (record_field
              (field_name
                (identifier
                  (identifier_word)))
              (record_literal
                (record_field
                  (field_name
                    (identifier
                      (identifier_word)))
                  (record_literal
                    (record_field
                      (field_name
                        (identifier
                          (identifier_word)))
                      (record_literal
                        (record_field
                          (field_name
                            (identifier
                              (identifier_word)))
                          (int_literal))))))))))))))

===
record nesting level 6
===
{
  value: {
    level1: {
      level2: {
        level3: {
          level4: {
            level5: {
              level6: 1,
            },
          },
        },
      },
    },
  },
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (record_literal
        (record_field
          (field_name
            (identifier
              (identifier_word)))
          (record_literal
            (record_field
              (field_name
                (identifier
                  (identifier_word)))
              (record_literal
                (record_field
                  (field_name
                    (identifier
                      (identifier_word)))
                  (record_literal
                    (record_field
                      (field_name
                        (identifier
                          (identifier_word)))
                      (record_literal
                        (record_field
                          (field_name
                            (identifier
                              (identifier_word)))
                          (record_literal
                            (record_field
                              (field_name
                                (identifier
                                  (identifier_word)))
                              (int_literal))))))))))))))))

===
record nesting level 7
===
{
  value: {
    level1: {
      level2: {
        level3: {
          level4: {
            level5: {
              level6: {
                level7: 1,
              },
            },
          },
        },
      },
    },
  },
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (record_literal
        (record_field
          (field_name
            (identifier
              (identifier_word)))
          (record_literal
            (record_field
              (field_name
                (identifier
                  (identifier_word)))
              (record_literal
                (record_field
                  (field_name
                    (identifier
                      (identifier_word)))
                  (record_literal
                    (record_field
                      (field_name
                        (identifier
                          (identifier_word)))
                      (record_literal
                        (record_field
                          (field_name
                            (identifier
                              (identifier_word)))
                          (record_literal
                            (record_field
                              (field_name
                                (identifier
                                  (identifier_word)))
                              (record_literal
                                (record_field
                                  (field_name
                                    (identifier
                                      (identifier_word)))
                                  (int_literal))))))))))))))))))

===
record nesting level 8
===
{
  value: {
    level1: {
      level2: {
        level3: {
          level4: {
            level5: {
              level6: {
                level7: {
                  level8: 1,
                },
              },
            },
          },
        },
      },
    },
  },
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (record_literal
        (record_field
          (field_name
            (identifier
              (identifier_word)))
          (record_literal
            (record_field
              (field_name
                (identifier
                  (identifier_word)))
              (record_literal
                (record_field
                  (field_name
                    (identifier
                      (identifier_word)))
                  (record_literal
                    (record_field
                      (field_name
                        (identifier
                          (identifier_word)))
                      (record_literal
                        (record_field
                          (field_name
                            (identifier
                              (identifier_word)))
                          (record_literal
                            (record_field
                              (field_name
                                (identifier
                                  (identifier_word)))
                              (record_literal
                                (record_field
                                  (field_name
                                    (identifier
                                      (identifier_word)))
                                  (record_literal
                                    (record_field
                                      (field_name
                                        (identifier
                                          (identifier_word)))
                                      (int_literal))))))))))))))))))))

===
record nesting level 9
===
{
  value: {
    level1: {
      level2: {
        level3: {
          level4: {
            level5: {
              level6: {
                level7: {
                  level8: {
                    level9: 1,
                  },
                },
              },
            },
          },
        },
      },
    },
  },
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (record_literal
        (record_field
          (field_name
            (identifier
              (identifier_word)))
          (record_literal
            (record_field
              (field_name
                (identifier
                  (identifier_word)))
              (record_literal
                (record_field
                  (field_name
                    (identifier
                      (identifier_word)))
                  (record_literal
                    (record_field
                      (field_name
                        (identifier
                          (identifier_word)))
                      (record_literal
                        (record_field
                          (field_name
                            (identifier
                              (identifier_word)))
                          (record_literal
                            (record_field
                              (field_name
                                (identifier
                                  (identifier_word)))
                              (record_literal
                                (record_field
                                  (field_name
                                    (identifier
                                      (identifier_word)))
                                  (record_literal
                                    (record_field
                                      (field_name
                                        (identifier
                                          (identifier_word)))
                                      (record_literal
                                        (record_field
                                          (field_name
                                            (identifier
                                              (identifier_word)))
                                          (int_literal))))))))))))))))))))))

===
record nesting level 10
===
{
  value: {
    level1: {
      level2: {
        level3: {
          level4: {
            level5: {
              level6: {
                level7: {
                  level8: {
                    level9: {
                      level10: 1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  },
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (record_literal
        (record_field
          (field_name
            (identifier
              (identifier_word)))
          (record_literal
            (record_field
              (field_name
                (identifier
                  (identifier_word)))
              (record_literal
                (record_field
                  (field_name
                    (identifier
                      (identifier_word)))
                  (record_literal
                    (record_field
                      (field_name
                        (identifier
                          (identifier_word)))
                      (record_literal
                        (record_field
                          (field_name
                            (identifier
                              (identifier_word)))
                          (record_literal
                            (record_field
                              (field_name
                                (identifier
                                  (identifier_word)))
                              (record_literal
                                (record_field
                                  (field_name
                                    (identifier
                                      (identifier_word)))
                                  (record_literal
                                    (record_field
                                      (field_name
                                        (identifier
                                          (identifier_word)))
                                      (record_literal
                                        (record_field
                                          (field_name
                                            (identifier
                                              (identifier_word)))
                                          (record_literal
                                            (record_field
                                              (field_name
                                                (identifier
                                                  (identifier_word)))
                                              (int_literal))))))))))))))))))))))))
